# taalapp-yew

./: Cargo.toml  Trunk.toml  index.html  style.css
src/: card.rs  event.rs  form.rs  leftbar.rs  main.rs  navbar.rs
src/card/: event.rs
src/navbar/: usermenu.rs
